# inicial_project

./: README.md
projeto_django/: pyproject.toml
projeto_inicial/tests/: README.md
