[project]
name = "projeto-django"
version = "0.1.0"
description = ""
authors = [
    {name = "mathfnz",email = "matheus.fnds20@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.2.1,<6.0.0)"
]

[tool.poetry]
packages = [{include = "projeto_django", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
